2009-10-15  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/test/test_component_providers.py:
	Correct typos, reactivate testModifySrc, and do not depend on a delay for
	it.

2009-10-15  Xavier Queralt  <xqueralt@flumotion.com>

	* flumotion/component/plugs/cortado/wizard_gtk.py:
	* flumotion/scenario/steps/httpstreamersteps.py:
	* flumotion/ui/plugarea.py:
	Set the checkbutton unsensitive when the required plug is not available
	in the system and show a tooltip explaining what to do to enable it.
	Closes #1349

2009-10-14  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* flumotion/test/test_component_providers.py:
	Remove all the md5/urandom parts to stick with strings,
	and put testModifySrc in todo state until #1375 is fixed.

2009-10-14  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	* flumotion/test/test_component_providers.py:
	Changes the import to use flumotion.common.python rather than md5 directly

2009-10-14  Guillaume Quintard  <guillaume.quintard@flumotion.com>

	reviewed by: Sebastien Merle

	* flumotion/test/test_component_providers.py:
	Adds a few tests for the cachedProvider

2009-10-13  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: Zaheer

	* flumotion/component/producers/firewire/firewire.py:
	Use a drop factor of 1 for framerates greater than 12.5
	Fixes #1369


2009-10-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/connections.py:
	Always use ConnectionInfo objects to update the PBConnectionInfo with
	the username and the password.
	* flumotion/test/test_admin_connections.py:
	Adapt the tests to the fact that RecentConnections store a
	PBConnectionInfo, not a ConnectionInfo.

2009-10-08  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/admin/connections.py:
	Store PBConnectionInfo in RecentConnection instances, not
	ConnectionInfo. A RecentConnection will never contain shell globs, so